# Ego-Localization-Thesis

./: CMakeLists.txt  README.md  package.xml
include/: Naes.h  adjustment.h  drive.h  drive.h~  localization.h  orientation.h  points.h  scanned.h
launch/: adjustment.launch  drive_track.launch  ego_points.launch
msg/: ego_points.msg  stop.msg  wheel_speeds.msg
src/: adjustment.cpp  drive_track.cpp  localization.cpp  tracking.cpp  zeroing.cpp
